MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.23', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'car-test1'
../Core/Src/main.c(40): error: expected ';' after top level declarator
   40 | void rx_proc(void)
      |                   ^
      |                   ;
1 error generated.
compiling main.c...
"car-test1\car-test1.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
